<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="pg_char">char</string>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">跳ねるあいさつの魔法</string>
	<string name="menu_reset">クリア</string>
	<string name="menu_setting">設定</string>
	<string name="menu_barcode">バーコード</string>
	<string name="pref_title">環境設定</string>
	<string name="pref_sensor_title">センサー設定</string>
	<string name="pref_disp_title">出現設定</string>
	<string name="pref_disp_summary">出現させたいキャラを設定します</string>
	<string name="pref_proximity_check_title">近接センサー</string>
	<string name="pref_proximity_check_summary">画面を手で隠したり離したりするとキャラが出てきます</string>
	<string name="pref_sound_check_title">音感センサー</string>
	<string name="pref_sound_check_summary">拍手など音に反応するとキャラが出てきます</string>
	<string name="pref_sound_seek_title">音感センサー感度調整</string>
	<string name="pref_sound_seek_summary">音感センサー感度の調整をします</string>
	<string name="pref_opt_title">重力切り替え</string>
	<string name="pref_opt_summary">様々な星の重力に切り替えます</string>
	<string name="pref_seek_title">音声スピード</string>
	<string name="pref_seek_summary">音声のスピードを変更出来ます</string>
	<string name="pref_pop_seek_title">跳ね具合</string>
	<string name="pref_pop_seek_summary">最大にすればするほどキャラが勢い良く跳ねます</string>
	<string name="pref_fireworks_title">花火エフェクト</string>
	<string name="pref_fireworks_summary">キャラ同士が強くぶつかると花火のように消えます</string>
	<string name="pref_touch_title">タッチ動作切り替え</string>
	<string name="pref_touch_summary">キャラをタッチすると跳ねさせるか、キャラをタッチするとつかんでグルグル回すかを選べます</string>


	<string name="pref_seek_slow">遅い</string>
	<string name="pref_seek_fast">速い</string>
	<string name="pref_seek_min">通常</string>
	<string name="pref_seek_max">最大</string>
	<string name="pref_seek_insensitivity">鈍感</string>
	<string name="pref_seek_sensitivity">敏感</string>
	<string name="pref_seek_default">初期値</string>

	<string name="dialog_barcode_title">バーコードインストール</string>
	<string name="dialog_barcode_message">マーケットからバーコードをインストールしますか？</string>

	<string name="dialog_disp_1">あいさつ坊や</string>
	<string name="dialog_disp_2">あいさつガール</string>
	<string name="dialog_disp_3">こんにちワン</string>
	<string name="dialog_disp_4">ありがとウサギ</string>
	<string name="dialog_disp_5">こんばんワニ</string>
	<string name="dialog_disp_6">さよなライオン</string>
	<string name="dialog_disp_7">おはよウナギ</string>
	<string name="dialog_disp_8">いただきマウス</string>
	<string name="dialog_disp_9">いってきまスカンク</string>
	<string name="dialog_disp_10">ただいマンボウ</string>
	<string name="dialog_disp_11">ごちそうさマウス</string>
	<string name="dialog_disp_12">おやすみなサイ</string>
	<string name="dialog_disp_13">AC</string>
	<string name="dialog_disp_14">グレートありがとウサギ</string>
	<string name="dialog_disp_15">キングさよなライオン</string>
	<string name="dialog_disp_16">消臭力少年</string>
	<string name="dialog_disp_17">ジャパネットたかた</string>
	<string name="dialog_disp_18">トーカ堂 北社長</string>
	<string name="dialog_disp_19">ムック</string>
	<string name="dialog_disp_20">松岡修造</string>
	<string name="dialog_disp_21">今でしょ？ 林修</string>
</resources>
