<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/pref_touch_title">
  	<ListPreference
  		android:key="opt_touch"
  		android:title="@string/pref_touch_title"
  		android:summary="@string/pref_touch_summary"
  		android:dialogTitle="@string/pref_touch_title"
  		android:entries="@array/list_touch_entries"
  		android:entryValues="@array/list_touch_entries_values"
		android:defaultValue="0"
  		/>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_title">
  	<jp.gaomar.magicofgreeting.PrefDispFlg
  		android:title="@string/pref_disp_title"
  		android:summary="@string/pref_disp_summary"/>
  	<ListPreference
  		android:key="opt_gravity"
  		android:title="@string/pref_opt_title"
  		android:summary="@string/pref_opt_summary"
  		android:dialogTitle="@string/pref_opt_title"
  		android:entries="@array/list_entries"
  		android:entryValues="@array/list_entries_values"
		android:defaultValue="3"
  		/>
  	<jp.gaomar.magicofgreeting.PrefSoundSeek
  		android:selectable="true"
  		android:enabled="true"
  		android:title="@string/pref_seek_title"
  		android:summary="@string/pref_seek_summary"
  		android:key="seeksound" />
  	<jp.gaomar.magicofgreeting.PrefPopSeek
  		android:selectable="true"
  		android:enabled="true"
  		android:title="@string/pref_pop_seek_title"
  		android:summary="@string/pref_pop_seek_summary"
  		android:key="seekpop" />
  	<CheckBoxPreference
  		android:key="chk_fireworks"
  		android:title="@string/pref_fireworks_title"
  		android:summary="@string/pref_fireworks_summary"
  		android:disableDependentsState="false"
  		/>

  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_sensor_title">
  	<CheckBoxPreference
  		android:key="chk_proximity"
  		android:title="@string/pref_proximity_check_title"
  		android:summary="@string/pref_proximity_check_summary"
  		android:disableDependentsState="false"
  		/>
  	<CheckBoxPreference
  		android:key="chk_sound"
  		android:title="@string/pref_sound_check_title"
  		android:summary="@string/pref_sound_check_summary"
  		android:disableDependentsState="false"
  		/>
  	<jp.gaomar.magicofgreeting.PrefEarSeek
  		android:title="@string/pref_sound_seek_title"
  		android:summary="@string/pref_sound_seek_summary"
  		android:key="seekear"
  		android:dependency="chk_sound" />
  </PreferenceCategory>
</PreferenceScreen>
