<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:gravity="center"
  android:paddingBottom="5dp">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/pref_seek_sensitivity"
				android:gravity="left"
				android:layout_weight="1"/>
			<Button
				android:id="@+id/btn_default"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/pref_seek_default"
				android:layout_weight="1"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/pref_seek_insensitivity"
				android:gravity="right"
				android:layout_weight="1"/>
		</LinearLayout>
		<SeekBar
			android:id="@+id/earseek"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:progress="9000"
			android:max="24000"
			android:paddingLeft="10dp"
			android:paddingRight="10dp" />
	</LinearLayout>
</LinearLayout>
